Fixed Security Config for CORS and Localhost